complianceX/aws/K8S/Helmchart/alb-controller/alb-compliancex-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "alb-compliancex-ingress"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class:                alb
    alb.ingress.kubernetes.io/scheme:           internet-facing
    alb.ingress.kubernetes.io/listen-ports:     '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=059516066038-logging-us-east-1,access_logs.s3.prefix=compliancex-lb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:059516066038:certificate/69ac6692-c4ab-4c50-94d1-7c639944f3ab    
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/target-type:      ip
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
  labels:
    app: alb-compliancex-ingress
spec:
  rules:
  - host:
    http:
      paths:
      - path: /compliancex/*
        backend:
          serviceName: ssl-redirect
          servicePort: use-annotation              
      - backend:
          serviceName: "compliancex-web"
          servicePort: 8000
        path: /compliancex/*
      - backend:
          serviceName: "ticketingsystem-web"
          servicePort: 8018
        path: /ticketing/*
      - backend:
          serviceName: "compliancex-web"
          servicePort: 8000
        path: /*
